Bug 334216, Tabs opened in the background from bookmarks have no generic icon. This makes non-bubbling events to be propagate back to the bindingParent(s) , r=sicking,sr=bz